cmake_minimum_required (VERSION 3.0)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
set(CMAKE_MACOSX_RPATH 1)
include (MacroOpenSplice)
include (osmacros)
find_package (OpenSplice REQUIRED)

add_subdirectory(helloworld)
add_subdirectory(partition)
add_subdirectory(topickey)
add_subdirectory(contentfilter)
add_subdirectory(lifecycle)
add_subdirectory(ownership)
add_subdirectory(chatroom)
add_subdirectory(presentation)
add_subdirectory(coherent)

set (CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Debug use
# jget_cmake_property(_variableNames VARIABLES)
# jlist (SORT _variableNames)
# jforeach (_variableName ${_variableNames})
# j    message(STATUS "${_variableName}=${${_variableName}}")
# jendforeach()
